examples/codegen/effects/generators_complex.an
effect Emit a with
    emit: fn a -> Unit

iota (n: U32) = loop (i = 0) ->
    if i < n then
        emit i
        recur (i + 1)

filter (stream: fn Unit -> Unit can Emit a) (f: fn a -> Bool pure) =
    handle stream ()
    | emit x ->
        if f x then
            emit x
        resume ()

map (stream: fn Unit -> Unit can Emit a) (f: fn a -> b pure): Unit can Emit b =
    handle stream ()
    | emit x ->
        emit (f x)
        resume ()

enumerate (stream: fn Unit -> Unit can Emit a): Unit can Emit (U32, a) =
    var i = 0u32
    handle stream ()
    | emit x ->
        emit (i, x)
        i += 1
        resume ()

for_ (stream: fn Unit -> Unit can Emit a) (f: fn a -> Unit pure) =
    handle stream ()
    | emit x ->
        f x
        resume ()

my_print (x1: (U32, U32)) =
    x = first x1
    y = second x1
    print "${x}, ${y}"

main () =
    iota 10
        ~> filter (_ %% 2)
        ~> map (_ * 2)
        ~> enumerate
        ~> for_ my_print

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/generators_complex.an:39:12
// 38 |     y = second x1
// 39 |     print "${x}, ${y}"	// error: Expected the end of this block but found `${`
//    |            ^^
// 
// Found 1 error and 0 warnings

